[package]
name = "juju-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.30"
serde = "1"
serde_derive = "1"
base64 = "0.22.0"
flate2 = "1.0.29"
deflate = "1.0.0"
inflate = "0.4.5"
serde_json = "1.0.116"